maze.island.IslandMaze.scala.code
override def run() {
  
  def avanceVersNord () {
    
    setDirection(Direction.NORTH)
    while (estFaceMur() == false) {
      avance();
    }
    //droite();
    //retourne();
   
  }
  
  def suitAGauche() {
    
   	gauche();
    while (estFaceMur() == true) {
      droite();
    }
    avance();
    
  }
  
  def keepHandOnSideWall(etat)  {
    
    etat match {
      
      case 0 => avanceVersNord(); etat = 1;
      
      case 1 => suitAGauche(); etat = 0;
      
      case _ => println("Ce cas ne devrait pas arriver. Corrigez le problème SVP. ");
         
    }
    
  }
  
  var etat = 0;
  
  while (estSurBiscuit == false) {
    keepHandOnSideWall(etat);
  }
  
	prendBiscuit();

  
}